# AI_Tool_Framework

./: .gitignore  ARTISTIC_PLUGIN_MANAGER_SOLUTION.md  COMPLETE_USER_MANUAL.md  GETTING_STARTED.md  HOW_TO_USE.md  PROJECT_COMPLETION_REPORT.md  README.md  USAGE_GUIDE.txt  build_exe.py  build_lite_exe.py  comprehensive_test.py  dcc_ue_plugin_system_research.md  framework_design_analysis.md  framework_manager.py  install_framework.py  launcher.py  plugin_system_implementation_examples.md  practical_usage_demo.py  pyproject.toml  requirements.txt  research_summary_report.md  simple_edit_test.py  simple_launcher.py  simple_test.py  test_blender_plugin.py  test_config_matching.py  test_custom_trigger_save_fix.py  test_edit_task_fix.py  test_final_edit_fix.py  test_trigger_fix.py  verification.py  历史  启动工具管理器.bat  启动工具管理器.vbs
.codemaker/rules/: rules.mdc
.lingma/specs/: dcc-ue-tool-framework.md
configs/: local_settings.example.json  tool_groups.json
configs/templates/: basic_dcc_tool.yaml  ue_engine_tool.yaml
docs/: ai_tool_generation.md  ide_integration_guide.md  intelligent_requirement_analysis.md  usage_guide.md  插件开发规范.md  系统架构与功能说明.md  美术人员使用指南.md  自动化接口规范.md
docs/归档文档/: 项目完成报告.md
ide_integration/dev_tools/: dev_toolkit.py
ide_integration/lingma_assistant/: index.js  package.json
ide_integration/vscode_extension/: package.json
installers/: maya_installer.py
src/: main.py
src/ai_nlp/: __init__.py  code_validator.py  (+3 more)
tasks/: test_task_001.json
test_automation_data/: automation_tasks.json
tests/: test_dynamic_loader.py  test_plugin_manager.py
(+67 files in other folders)
